--- a/index.html
+++ b/index.html
@@ -592,8 +592,12 @@
 			     alt="Email"
 			     style="width:50px; height:50px;">
 		  </button>
-		  
-		  <button class="service-btn">D</button>
+
+		  <button class="service-btn" style="display:flex; align-items:center; justify-content:center;" title="Twitter">
+		    <img src="images/twitter.svg"
+			     alt="Twitter"
+			     style="width:50px; height:50px;">
+		  </button>
 
 		  <!-- row 2 -->
 		  <button class="service-btn">E</button>
